# pico-counter-nn

./: CMakeLists.txt  README.md  pico-counter-nn.c
include/: h595-shift-register-nn.h
src/: CMakeLists.txt  h595-shift-register-nn.c
